# revops-ia-saas

./: .commitlintrc.json  .env.example  .gitguardian.yml  .gitignore  .release-please-config.json  CHANGELOG.md  Makefile  README.md  memo_axesconstruction.txt
docs/: AUTOPILOT.md  (+5 more)
mcp/mcp-analytics/: .env.example  Cargo.toml  Dockerfile  README.md
mcp/mcp-analytics/.sqlx/: query-05ef4858895a04ca3744ad29f0ea98c53b4c22568dae34e38d9d04cf83f5ae6b.json  query-07161b7db4298b9ca6c7f7ceb5c8b939566dbe1ea87b45fc5b4234f423208505.json  query-0ac0c880378a19c7402e59c8dfef1ddd934881f9130646e37ee0702fc147a8b2.json  query-1c800b9c94c10f7a013763008a890085e698caf8360633ad0ac2dc1a0bb78496.json  query-512ef44fdd2a8053c1666aadbb4dfa5e13b6035b7280d39e199f4666ae940cdc.json  query-5272697284c35c9973e3dd5b30e564645f90c0a668d136f152c27b0915b59691.json  query-60a9630d38a8e55978a06e6c2f29d4b18ada345a351207c61d02cb2b39d7a1d0.json  query-7a6c40b7cb8c22c498031788412ce6c32db59c7e4f6c44f783e126aa22b720a2.json  query-8a1ea09ab818b1c2203729381dbf8550841a21b478fbb5c54146233cadea9ac4.json  query-9cfeb168f48abb9ba97991b8f785eb3936b5716298318d20f56affe6384e5556.json  query-a991d89c997a578e1e4808d758240131ae3de9b8d8eebaf58d5166101ece2f81.json  query-b8ead7ff1f2fcfca746f06df548b9acff0863333877af534fe39ea8e175df7a2.json  query-caae1779312108191ac71676b2a3fb024274622e5f58cd0c7dea1679c16aaf24.json  query-da2daeaaf8282eff8f8faf009aa39e365cf9c2a0ca56c7abc43e531f57ec6f5f.json  query-e28c8d6680e4bb44e48c6664cf27d82d99853c999f48438fac8e63800a9afd10.json  query-ef47d575ebf1a1c9346ffc864b8d794b45b77a05baef568d03dea22353510477.json  query-f498db0af98e69cc776e15aa56e557a6b8cd9892306845bb78e348d40f08ad26.json  query-fa8e04349b698b6a4f10a0be9301f5a4800e164d48146129ad51798124cbc3af.json  query-fae563fdc44563b1e330f0ee66a8a92ec40fdfad2b88935288b34b5a83accd7c.json
mcp/mcp-analytics/src/: audit.rs  config.rs  db.rs  errors.rs  http.rs  main.rs  schemas.rs  server.rs
mcp/mcp-filesystem/: .env.example  Cargo.toml  Dockerfile  README.md
mcp/mcp-filesystem/.sqlx/: query-1404b927690ed85aecfbf99d05f6e2685ffcc9807832c9da99b56dd8af8c889a.json  query-257166a90c528c113452c055054dc470667aae7046952f27a178445cdf2659fa.json  query-3b102132ad7f977f72af3615e74f055db9fadbc5d28ab08275bcce44d4dcba8e.json  query-525ef432b5b81efb63d4560a689be1e9806218633b67e09cef2adf5d1d4261ef.json  query-8ec375fee1649d0b3ec409111651c5ce9783a7adbb3f8d5d4f763cb5a5e11236.json  query-a97a96f0f06dcd6e393e8015af5b3f71587cb905bdd4af9bb6df0ec0de7bf6bf.json  query-be8b06e9fcc20e5460b8f54386b4345da5742346e27bbb3f657ff6a42e9e693d.json  query-c172c9071ee05abc1af047d85346bb2a79e49de7b4d100c8246beb67278332a6.json  query-c529557f3f4983564df74aa7514d7dc1b62920a63ba47841009de67192067b61.json  query-d2370fc65e04672bad32f2f13e7ac0d2a28c5df5bd435a9c2a603b8db9047208.json  query-f8e2237d28c7060d4d911f88a83e8177368c7a588b2b1907be4a53a5fccc40e7.json  query-fe2c703792044a687e015a866d0478587a6b9cf7df14295fb1a7ac5c754ebffe.json
mcp/mcp-filesystem/src/: audit.rs  config.rs  db.rs  errors.rs  http.rs  main.rs  rag_client.rs  schemas.rs  server.rs  storage.rs
mcp/mcp-sequences/: .env.example  Cargo.toml  Dockerfile  README.md
mcp/mcp-sequences/.sqlx/: query-01d2a0937b493eca3d30ccca7b54d5e1dfc92a7be73fa282b375e0d55d385dff.json  query-039cdeef7cf3600b2e90a7836ad6a749a0f699a1139c0183bbe0db3a258fe47a.json  query-05466424e60edd05c5bc9589fef2cca61abcc8b3f5f7384548969f6a2e169990.json  query-1506b2d8c31f80f3749ea2a12d2a8485aded3aa2790c00512253a476330757cd.json  query-2a4fe5ce594ee949a45ee61ca40928ca31cb56712dc158a8cd5b1caeab19ed3d.json  query-348715ec49e8bbaff069707eec29dfed35187f3349048fae24249558537ea9df.json  query-54f91e29aace65736ecd92788fa717302ed763a3979d5d941717189199a3069e.json  query-7ddfa2e278340c033cf3097d46a32c84893826b0930401e8e63a9b4c37137f87.json  query-8459587cb23768d5e7576b5ae1ac2bbc1e7886445496b5f684565282aa30f68d.json  query-9455c7bbce1889621b9af543adb7a50815e37aa18962668d27db5fd786ecaf02.json  query-947d3a2b1233f20820709bc84ae8baa9998d6b5fd9a15d169eff2c24474ef672.json  (+18 more)
orchestrator/: .env.example  Cargo.toml  Dockerfile  README.md
orchestrator/src/: config.rs  error.rs  lib.rs  main.rs  models.rs
orchestrator/tests/: integration_test.rs
(+406 files in other folders)
