[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchestrator"
path = "src/lib.rs"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.7", features = ["macros"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.26", features = ["tonic", "trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.26", features = ["semconv_experimental"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
axum = { version = "0.7", features = ["macros"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
