[package]
name = "mcp-analytics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-analytics"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.7"
rmcp = { version = "0.1", features = ["server", "transport-io", "transport-sse-server"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
sha2 = "0.10"
hex = "0.4"
