[package]
name = "mcp-filesystem"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-filesystem"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.10", features = ["server", "transport-io", "transport-sse-server"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
async-trait = "0.1"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
